--- a/_layout/default.html
+++ b/_layout/default.html
@@ -18,6 +18,15 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ '/assets/assets/images/apple-touch-icon.png?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/assets/images/favicon-32x32.png?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/assets/images/favicon-16x16.png?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -28,6 +37,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
+        <a href="https://projects.voldy87.tk" class="btn">My projects</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
